--- a/src/assets/css/components/rightPanel.scss
+++ b/src/assets/css/components/rightPanel.scss
@@ -40,7 +40,7 @@
   font-size: 14px;
   flex-shrink: 0;
 }
-.active{
+.right-choices .active{
   color: #5584ff;
   border-bottom: 2px solid #5584ff;
   box-shadow: 0 0 3px #eee;
